--- a/testframe/pom.xml
+++ b/testframe/pom.xml
@@ -16,6 +16,13 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
+  
+  	<dependency>
+    	<groupId>org.htmlparser</groupId>
+    	<artifactId>htmlparser</artifactId>
+    	<version>2.1</version>
+	</dependency>
+  
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
